# better_highlighting

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: github-actions-demo.yml
better_highlighting/: better_highlighting.py  data_format.py  json_lexer.py  style_builders.py
cute_print/: cute_print.py  data_format.py  style_builders.py
src/better_highlighting/: __init__.py  better_highlitghting.py  data_format.py
src/better_highlighting/components/: __init__.py  colors.py  creator.py  fonts.py  highlighters.py
src/better_highlighting/components/lexers_and_styles/: json_lexer.py  style_builders.py
tests/: conftest.py  test_formatting.py
