[tool.poetry]
name = "better_highlighting"
version = "2.0.0"
description = "Small tool for text and syntax highlight."
authors = ["vskarinov <skarinov27@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/vskarinov/better_highlighting"
repository = "https://github.com/vskarinov/better_highlighting"
include = [
    "LICENSE",
]

packages = [
#    { include = "better_highlighting", from = "src"},
    { include = "better_highlighting", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
Pygments = "^2.11.2"
tabulate = "^0.8.9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3"
pytest = "^7.1.2"
pylint = "^2.11.1"
mypy = "^0.910"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
isort = "^5.9.3"
types_tabulate = "^0.9.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"